...
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".LoginActivity">

    <EditText
      android:id="@+id/email_Login_editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/prompt_email"
      android:inputType="textEmailAddress"
...
      app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
      android:drawableStart="@drawable/ic_person"
      android:drawablePadding="@dimen/ic_padding"
      android:background="@drawable/edit_text_default"/>

    <EditText
      android:id="@+id/password_Login_editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/prompt_password"
      android:inputType="textPassword"
...
      app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
      android:drawableStart="@drawable/ic_lock"
      android:drawablePadding="@dimen/ic_padding"/>


    <Button
      android:id="@+id/login_Login_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@drawable/style_primary"
      android:layout_marginStart="@dimen/margin_button"
      android:layout_marginEnd="@dimen/margin_button"
      android:onClick="logIn"
...
