...
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
      app:subtitleTextColor="@color/white"
      app:titleTextColor="@color/white" />


    <LinearLayout
        android:id="@+id/columnLayout_Scrolling_LinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/Favorites_toolbar">


        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recycler_favorites"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scrollbars="vertical"
          app:layoutManager="LinearLayoutManager" />

    </LinearLayout>
...
