...
    <string name="notSetCallbackTextView">not set</string>
    <string name="permissionDefault">Permission</string>
    <string name="currentLocation">Current location :</string>
    <string name="locationUnknown">unknown</string>
    <string name="getLocationButton">Get location</string>
    <string name="locationDefault">0.0</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="userAds">Your Ads</string>

    <!-- FullScreenImageActivity stuff -->
    <string-array name="periodList">
        <item>Month</item>
        <item>Week</item>
...
