<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_favorite"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/add_to_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_home_sweet_home"
        android:icon="@drawable/appart_icon_corrected"
        android:title="@string/add_to_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_account"
        android:title="@string/action_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorite"
        android:title="@string/favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_step_counter"
        android:title="@string/stepCounterInToolbar"/>
  
    <item
        android:id="@+id/action_userAds"
        android:title="@string/userAds"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>